--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body">
-        <p>আপনার CV এখানে আপলোড করুন বা যদি চান আমি একটি PDF তৈরি করে দিতে পারি।</p>
+        <p>CV ar not found</p>
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -273,4 +273,5 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
